@@ -1,3 +1,3 @@
-EBUILD vlmc-9999.ebuild 993 RMD160 e119481e8c24537f25168b082a00908b80e13fa4 SHA1 060c03d44c1b6897beadb1e32fabaee1f3aec818 SHA256 bcf2b427637c9ba1d9d5e695caf16c8a19c17a0d6b418c3f2170963d5710b451
-MISC ChangeLog 492 RMD160 bd81f3917470e775bffa96eb658fd1b1f667668c SHA1 67c18add310450ce8dbdbaa080bb012ad08fb360 SHA256 69e58be5aad8569f5e20921a70e83f75351db032407be8a15f4acae93eb117ff
+EBUILD vlmc-9999.ebuild 995 RMD160 39400408ef7bc0ba05ddd2297725624bb8117864 SHA1 6b8ba6fb3e45e538df9ff12bdfb94a05ab47f881 SHA256 cb9e4dbe6ba9b3eeaed2d363c869a3617430aa1ed8ab4c78abd35bcf92484809
+MISC ChangeLog 583 RMD160 50b2b9b7f734d32ab634a03bc6f8da21b5a74454 SHA1 ec665c271e37ae66592ec84f1ff1729eac8ef6c5 SHA256 45de72da76958316b79ff376a6b98c5716be73a4f2b78017cb4997d8b86f54dd
 MISC metadata.xml 246 RMD160 365a2af90d65b4cdf3173796433f7419185886cd SHA1 2ab41bdcbdc4cba8cee3558af4ed6558df5aef4f SHA256 7383ad47c2b90e0e006aee3461a4bcee355ef96eab215d868bb68e38e9910bea
