@@ -1,6 +1,9 @@
 # ChangeLog for media-video/vlmc
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  01 Jul 2011; Nikoli <nikoli@lavabit.com> vlmc-9999.ebuild:
+  migrate to git-2 and EAPI4
 
   05 Oct 2010; Nikoli <nikoli@lavabit.com> vlmc-9999.ebuild:
   update linguas, sed
